Automate Java-to-TypeScript conversion in `Main`. Add support for recursive file processing and dynamic path handling. Remove unused code from `Main.ts`.